--- a/WTN_landing.css
+++ b/WTN_landing.css
@@ -150,3 +150,12 @@ button  {
   border-radius: 50%;
   overflow: hidden;
 }
+
+@media only screen and (max-device-width: 320px) {
+
+   button {
+    font-size: 0.5em;
+    text-align: center;
+   }
+
+}
