--- a/WTN_landing.css
+++ b/WTN_landing.css
@@ -111,6 +111,7 @@ input{
 
 }
 
+
 input:first-of-type
 {
   margin-top:35px;
@@ -151,11 +152,24 @@ button  {
   overflow: hidden;
 }
 
-@media only screen and (max-device-width: 320px) {
+@media (max-width:412px)  {
 
-   button {
-    font-size: 0.5em;
-    text-align: center;
+   .text_box_info {
+    font-size: 1em;
+    margin-top: 12%;
    }
 
+   .gender_option select {
+    padding: 0 5px;
+   }
+
+   .gender_option {
+    padding: 0;
+    padding-top: -10px;
+    font-size: 1em;
+   }
+
+   button {
+    padding: 0;
+   }
 }
